force-app/main/default/objects/RawMaterial__c/RawMaterial__c.object-meta.xml
<CustomObject>
    <description>Contains the Raw Material Forecast Values</description>
    <label>Rohmaterial</label>
    <nameField>
        <label>Raw Material Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rohmaterialien</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>