force-app/main/default/objects/RawMaterial__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <description>Captures the error when Raw Material data is send to Heroku.</description>
    <label>Error</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>