force-app/main/default/objects/RawMaterial__c/fields/MaterialNumber__c.field-meta.xml
<CustomField>
    <fullName>MaterialNumber__c</fullName>
    <externalId>true</externalId>
    <label>Material Number</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>