force-app/main/default/objects/RawMaterial__c/fields/RLevel1__c.field-meta.xml
<CustomField>
    <fullName>RLevel1__c</fullName>
    <label>R-Level-1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Metall. Einsatz</fullName>
            </value>
            <value>
                <fullName>Nichtmetall. Einsatz</fullName>
            </value>
            <value>
                <fullName>Zuschläge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>