force-app/main/default/objects/RawMaterial__c/fields/RLevel2__c.field-meta.xml
<CustomField>
    <fullName>RLevel2__c</fullName>
    <label>R-Level-2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RLevel1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Schrott</fullName>
            </value>
            <value>
                <fullName>Legierungen</fullName>
            </value>
            <value>
                <fullName>Roheisen</fullName>
            </value>
            <value>
                <fullName>Nichtmetall. Zuschläge</fullName>
            </value>
            <value>
                <fullName>Energie / Medien</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>