force-app/main/default/objects/RawMaterial__c/fields/RLevel3__c.field-meta.xml
<CustomField>
    <fullName>RLevel3__c</fullName>
    <label>R-Level-3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RLevel2__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eigenschrott</fullName>
            </value>
            <value>
                <fullName>Kaufschrott</fullName>
            </value>
            <value>
                <fullName>Aluminium</fullName>
            </value>
            <value>
                <fullName>Bleigranalien</fullName>
            </value>
            <value>
                <fullName>Chrom</fullName>
            </value>
            <value>
                <fullName>Mangan</fullName>
            </value>
            <value>
                <fullName>Silizium</fullName>
            </value>
            <value>
                <fullName>Molybdän</fullName>
            </value>
            <value>
                <fullName>Nickel</fullName>
            </value>
            <value>
                <fullName>Tellur</fullName>
            </value>
            <value>
                <fullName>Selen</fullName>
            </value>
            <value>
                <fullName>Titan</fullName>
            </value>
            <value>
                <fullName>Bismut</fullName>
            </value>
            <value>
                <fullName>Vanadium</fullName>
            </value>
            <value>
                <fullName>Roheisen</fullName>
            </value>
            <value>
                <fullName>Entschwefelungsmittel</fullName>
            </value>
            <value>
                <fullName>Kalk</fullName>
            </value>
            <value>
                <fullName>Kohlungsmittel und Koks</fullName>
            </value>
            <value>
                <fullName>Sonstige Zuschläge</fullName>
            </value>
            <value>
                <fullName>Sonstige Legierungen</fullName>
            </value>
            <value>
                <fullName>Delta Gas zu Grundplan</fullName>
            </value>
            <value>
                <fullName>Delta Strom zu Grundplan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>