force-app/main/default/objects/RawMaterial__c/fields/TimePoint10__c.field-meta.xml
<CustomField>
    <fullName>TimePoint10__c</fullName>
    <label>Time Point 10</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>