force-app/main/default/objects/RawMaterial__c/fields/TimePoint11__c.field-meta.xml
<CustomField>
    <fullName>TimePoint11__c</fullName>
    <label>Time Point 11</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>