force-app/main/default/objects/RawMaterial__c/fields/TimePoint12__c.field-meta.xml
<CustomField>
    <fullName>TimePoint12__c</fullName>
    <label>Time Point 12</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>