force-app/main/default/objects/RawMaterial__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I</fullName>
                <label>Internal</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>External</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>